--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
     name: Build on Ubuntu
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3.5.3
     - name: Python Linter # see: https://github.com/marketplace/actions/python-linter
       # You may pin to the exact commit or the version.
       # uses: sunnysid3up/python-linter@93076bd8f740f062069291d738fc70c1b4171c1d
