--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3.5.3
     - name: Python Linter # see: https://github.com/marketplace/actions/python-linter
-      # You may pin to the exact commit or the version.
-      # uses: sunnysid3up/python-linter@93076bd8f740f062069291d738fc70c1b4171c1d
-      uses: sunnysid3up/python-linter@v0.1-beta.7
+      uses: sunnysid3up/python-linter@master
 
   macos_check:
     name: Build on macOS
