--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,17 @@ jobs:
     name: Build on Ubuntu
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3.5.3
+    - name: Checkout repository
+      uses: actions/checkout@v3.5.3
+      
+    - name: Set up Python
+      uses: actions/setup-python@v4.7.1
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        
     - name: Python Linter # see: https://github.com/marketplace/actions/python-linter
       uses: sunnysid3up/python-linter@master
 
