adds options to Python linter in  ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
         
     - name: Python Linter # see: https://github.com/marketplace/actions/python-linter
       uses: sunnysid3up/python-linter@master
+      with:
+        pylint-options: "--rcfile=setup.cfg"
+        isort-options: "-w 100"
 
   macos_check:
     name: Build on macOS
