--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       uses: sunnysid3up/python-linter@master
       with:
         mypy-options: "--ignore-missing-imports --show-error-codes"
-        pylint-options: "--ignore-__init__.py"
+        pylint-options: "--rcfile=configs/.pylintrc"
         # isort-options: "-w 100"
 
   macos_check:
