--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pylint
         
     - name: Python Linter # see: https://github.com/marketplace/actions/python-linter
       uses: sunnysid3up/python-linter@master
