--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,17 +14,17 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4.7.1
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pylint
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install -r requirements.txt
+    #     pip install pylint
         
     - name: Python Linter # see: https://github.com/marketplace/actions/python-linter
       uses: sunnysid3up/python-linter@master
       with:
         mypy-options: "--ignore-missing-imports --show-error-codes"
-        pylint-options: "--recursive=true --rcfile=configs/.pylintrc"
+        pylint-options: "--rcfile=setup.cfg"
         # isort-options: "-w 100"
 
   macos_check:
