--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,29 +14,42 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4.7.1
 
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install -r requirements.txt
-    #     pip install pylint
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        pip install pylint
+        pip install mypy
+        pip install black
+
+    - name: Run Black
+      run: black .
+
+    - name: Run pylint
+      run: pylint . --recursive=true
+
+    - name: Run mypy
+      run: mypy . --ignore-missing-imports --show-error-codes
+
         
-    - name: Python Linter # see: https://github.com/marketplace/actions/python-linter
-      uses: sunnysid3up/python-linter@master
-      with:
-        mypy-options: "--ignore-missing-imports --show-error-codes"
-        pylint-options: "--rcfile=setup.cfg"
-        # isort-options: "-w 100"
+        
+    # - name: Python Linter # see: https://github.com/marketplace/actions/python-linter
+    #   uses: sunnysid3up/python-linter@master
+    #   with:
+    #     mypy-options: "--ignore-missing-imports --show-error-codes"
+    #     pylint-options: "--rcfile=setup.cfg"
+    #     # isort-options: "-w 100"
 
-  macos_check:
-    name: Build on macOS
-    needs: [ubuntu_check]
-    runs-on: macos-latest
-    steps:
-    - run: date
+  # macos_check:
+  #   name: Build on macOS
+  #   needs: [ubuntu_check]
+  #   runs-on: macos-latest
+  #   steps:
+  #   - run: date
 
-  windows_check:
-    name: Build on Windows
-    needs: [ubuntu_check]
-    runs-on: windows-latest
-    steps:
-    - run: date
+  # windows_check:
+  #   name: Build on Windows
+  #   needs: [ubuntu_check]
+  #   runs-on: windows-latest
+  #   steps:
+  #   - run: date
