major changesgit status

--- a/settings.json
+++ b/settings.json
@@ -2,12 +2,21 @@
     "vehicle_geometry": {
         "front_axle_to_pin": 1.736,
         "rear_axle_to_pin": 1.798,
-        "tread_width": 2.622,
+        "front_tread_width": 2.622,
+        "rear_tread_width": 2.622,
         "wheel_width": 0.776,
         "wheel_radius": 0.843
+    },
+    "vehicle_initial_state":{
+        "position": [0, 0],
+        "orientation": 0,
+        "articulation" : 0
     },
     "simulation": {
         "time_step": 0.01,
         "default_run_time": [0, 60]
+    },
+    "animation": {
+        "animation_window": [[-10, 10], [-10, 10]]
     }
 }
