--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,17 +19,13 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install pylint
-        pip install mypy
         pip install black
 
     - name: Run Black
-      run: black .
+      run: black . --check
 
     - name: Run pylint
-      run: pylint . --recursive=true
-
-    - name: Run mypy
-      run: mypy . --ignore-missing-imports --show-error-codes
+      run: pylint . --recursive=true --disable=too-few-public-methods
 
         
         
